# DocSearchEngine

./: CMakeLists.txt  README.md  answers.json  config.json  requests.json
include/: ConverterJson.h  InvertedIndex.h  SearchServer.h  ThreadPool.h  WordOccurrenceStruct.h
src/: CMakeLists.txt  ConverterJson.cpp  DocSearchEngine.cpp  InvertedIndex.cpp  SearchServer.cpp  ThreadPool.cpp
tests/: CMakeLists.txt  tests.cpp
tests/docs/: 00colors.txt  01animals.txt  02food.txt  03aesop.txt  04aristotle.txt
